# scn-editor

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  scn-editor.ini
kb/scn_editor/: rrel_current_scn_page.scs  rrel_scn_page.scs  scn_editor.scs
kb/scn_editor/agents/: add_to_scn_page_agent.scs  create_scn_page_agent.scs  delete_scn_page_agent.scs  open_scn_page_agent.scs  remove_from_scn_page_agent.scs  select_scn_page_agent.scs
kb/section_subject_domain_of_ui_components/: section_subject_domain_of_ui_components.scs
kb/section_subject_domain_of_ui_components/concepts/: concept_activating_component.scs  concept_atomic_user_interface_component.scs  concept_blank_space_component.scs  concept_button_component.scs  concept_chart_component.scs  concept_checkbox_component.scs  concept_command_input_component.scs  concept_command_selection_component.scs  concept_container_component.scs  concept_continuous_manipulation_component.scs  concept_data_input_component.scs  concept_data_input_with_direct_feedback_component.scs  concept_data_input_without_direct_feedback_component.scs  concept_data_output_component.scs  concept_decorative_user_interface_component.scs  concept_drawing_area_component.scs  concept_graphical_output_component.scs  concept_headline_component.scs  concept_image_output_component.scs  concept_interactive_user_interface_component.scs  concept_list_container_component.scs  concept_map_component.scs  concept_menu_bar_component.scs  concept_menu_component.scs  concept_menu_item_component.scs  concept_message_component.scs  concept_modal_window_component.scs  concept_motion_input_component.scs  concept_multiline_text_field_component.scs  concept_non_atomic_user_interface_component.scs  concept_non_modal_window_component.scs  concept_operation_trigger_component.scs  concept_paragraph_component.scs  concept_presentation_manipulation_component.scs  concept_presentation_user_interface_component.scs  concept_progress_bar_component.scs  concept_radiobutton_component.scs  concept_resizer_component.scs  concept_scroll_pane_component.scs  concept_scrollbar_component.scs  (+25 more)
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/commonModule/: CMakeLists.txt  commonModule.cpp  commonModule.hpp
problem-solver/cxx/commonModule/searchSemNeighborhoodAgent/: searchSemNeighborhoodAgent.cpp  searchSemNeighborhoodAgent.hpp  searchSemNeighborhoodKeynodes.cpp  searchSemNeighborhoodKeynodes.hpp
problem-solver/cxx/scnEditorModule/: CMakeLists.txt  scnEditorModule.cpp  scnEditorModule.hpp
problem-solver/cxx/scnEditorModule/addToScnPageAgent/: addToScnPageAgent.cpp  addToScnPageAgent.hpp  addToScnPageKeynodes.cpp  addToScnPageKeynodes.hpp
problem-solver/cxx/scnEditorModule/createScnPageAgent/: createScnPageAgent.cpp  createScnPageAgent.hpp  createScnPageKeynodes.cpp  createScnPageKeynodes.hpp
problem-solver/cxx/scnEditorModule/deleteScnPageAgent/: deleteScnPageAgent.cpp  deleteScnPageAgent.hpp  deleteScnPageKeynodes.cpp  deleteScnPageKeynodes.hpp
problem-solver/cxx/scnEditorModule/openScnPageAgent/: openScnPageAgent.cpp  openScnPageAgent.hpp  openScnPageKeynodes.cpp  openScnPageKeynodes.hpp
problem-solver/cxx/scnEditorModule/removeFromScnPageAgent/: removeFromScnPageAgent.cpp  removeFromScnPageAgent.hpp  removeFromScnPageKeynodes.cpp  removeFromScnPageKeynodes.hpp
problem-solver/cxx/scnEditorModule/selectScnPageAgent/: selectScnPageAgent.cpp  selectScnPageAgent.hpp  selectScnPageKeynodes.cpp  selectScnPageKeynodes.hpp
