set(SELECT_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/selectScnPageAgent")
set(CREATE_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/createScnPageAgent")
set(ADD_TO_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/addToScnPageAgent")
set(REMOVE_FROM_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/removeFromScnPageAgent")
set(DELETE_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/deleteScnPageAgent")
set(OPEN_SCN_PAGE_AGENT "${CMAKE_CURRENT_LIST_DIR}/openScnPageAgent")

file(GLOB SELECT_SCN_PAGE_AGENT_SRC ${SELECT_SCN_PAGE_AGENT}/*.cpp)
file(GLOB CREATE_SCN_PAGE_AGENT_SRC ${CREATE_SCN_PAGE_AGENT}/*.cpp)
file(GLOB ADD_TO_SCN_PAGE_AGENT_SRC ${ADD_TO_SCN_PAGE_AGENT}/*.cpp)
file(GLOB REMOVE_FROM_SCN_PAGE_AGENT_SRC ${REMOVE_FROM_SCN_PAGE_AGENT}/*.cpp)
file(GLOB DELETE_SCN_PAGE_AGENT_SRC ${DELETE_SCN_PAGE_AGENT}/*.cpp)
file(GLOB OPEN_SCN_PAGE_AGENT_SRC ${OPEN_SCN_PAGE_AGENT}/*.cpp)

file(GLOB SELECT_SCN_PAGE_AGENT_HEADERS ${SELECT_SCN_PAGE_AGENT}/*.hpp)
file(GLOB CREATE_SCN_PAGE_AGENT_HEADERS ${CREATE_SCN_PAGE_AGENT}/*.hpp)
file(GLOB ADD_TO_SCN_PAGE_AGENT_HEADERS ${ADD_TO_SCN_PAGE_AGENT}/*.hpp)
file(GLOB REMOVE_FROM_SCN_PAGE_AGENT_HEADERS ${REMOVE_FROM_SCN_PAGE_AGENT}/*.hpp)
file(GLOB DELETE_SCN_PAGE_AGENT_HEADERS ${DELETE_SCN_PAGE_AGENT}/*.cpp)
file(GLOB OPEN_SCN_PAGE_AGENT_HEADERS ${OPEN_SCN_PAGE_AGENT}/*.hpp)

set(SOURCES
	"scnEditorModule.cpp"
	${SELECT_SCN_PAGE_AGENT_SRC}
	${CREATE_SCN_PAGE_AGENT_SRC}
	${ADD_TO_SCN_PAGE_AGENT_SRC}
	${REMOVE_FROM_SCN_PAGE_AGENT_SRC}
	${DELETE_SCN_PAGE_AGENT_SRC}
	${OPEN_SCN_PAGE_AGENT_SRC})

set(HEADERS
	"scnEditorModule.hpp"
	${SELECT_SCN_PAGE_AGENT_HEADERS}
	${CREATE_SCN_PAGE_AGENT_HEADERS}
	${ADD_TO_SCN_PAGE_AGENT_HEADERS}
	${REMOVE_FROM_SCN_PAGE_AGENT_HEADERS}
	${DELETE_SCN_PAGE_AGENT_HEADERS}
	${OPEN_SCN_PAGE_AGENT_HEADERS})

include_directories(
        ${CMAKE_CURRENT_LIST_DIR}
        ${SC_MEMORY_SRC}
        ${SC_KPM_SRC}
	${SC_TOOLS_SRC}
	${SELECT_SCN_PAGE_AGENT}
	${CREATE_SCN_PAGE_AGENT}
	${ADD_TO_SCN_PAGE_AGENT}
	${REMOVE_FROM_SCN_PAGE_AGENT}
	${DELETE_SCN_PAGE_AGENT}
	${OPEN_SCN_PAGE_AGENT})

add_library(scn-editor SHARED ${SOURCES} ${HEADERS})
target_link_libraries(scn-editor sc-memory sc-agents-common)

sc_codegen_ex(scn-editor ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/generated)
